# F1-ERS-optimizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_SPEC.md  main.cpp  optest.py  physics_check.cpp  straight_formula_check.cpp  structure and planning.docx  test.py  ~$ructure and planning.docx
.claude/agents/: f1-regs.md
include/: battery.h  car.h  optimizer.h  physics.h  segment.h  slow-corner.h  straight.h  track.h
src/: battery.cpp  battery.h  car.cpp  main.cpp  optimizer.cpp  physics.cpp
src/python-testing-files/: optest.py  suggested_fix.py  test.py
src/track-model/: fast-corner.cpp  fast-corner.h  segment.cpp  segment.h  slow-corner.cpp  slow-corner.h  straight.cpp  track.cpp
test/: test_battery.cpp  test_car.cpp  test_optimizer.cpp  test_physics.cpp  test_track.cpp
